# TTS-Voxcpm2-agent

./: .dockerignore  .env.dev  .env.prod  .env.test  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  WINDOWS-START.md  business-design.md  fly.toml  mvp-flow.md  prototype.html  run.sh  spec.md  start-desktop-stack-debug.bat  start-desktop-stack.bat  start-local-stack-debug.bat  start-local-stack.bat  stop-desktop-stack.bat  stop-local-stack.bat  test.sh
server/: alembic.ini  pyproject.toml
server/api/: auth.py  deps.py  errors.py  main.py
server/api/routes/: audio.py  episodes.py  health.py  keys.py  media.py  presets.py
server/core/: __init__.py  bilibili_import.py  cleanup.py  db.py  domain.py  export_bundle.py  fish_client.py  groq_asr_client.py  media_processing.py  models.py  p1_logic.py  p5_logic.py  p6_logic.py  repositories.py  runtime_mode.py  storage.py  tts_presets.py  voxcpm_client.py
server/flows/: __init__.py  concurrency.py  deploy.py  finalize_take.py  retry_chunk.py  run_episode.py  worker_bootstrap.py
server/flows/tasks/: __init__.py  p1_chunk.py  p1c_check.py  p2_synth.py  p2c_check.py  p2v_verify.py  p3_transcribe.py  p5_subtitles.py  p6_concat.py  p6v_check.py
server/migrations/versions/: V002_check_gates_and_normalized_history.py  V004_chunk_next_gap_ms.py
server/scripts/: bilibili_import_entry.py
server/tests/: conftest.py  test_bilibili_import.py  test_cleanup.py  test_export_bundle.py  test_media_processing.py  test_repositories.py  test_storage.py  test_tts_presets.py
voxcpm-svc/: pyproject.toml  server.py
(+158 files in other folders)
