[project]
name = "voxcpm-svc"
version = "0.1.0"
description = "Resident local VoxCPM HTTP service for tts-agent-harness"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.6",
  "soundfile>=0.13",
  "voxcpm",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
